# madfm

./: CMakeLists.txt  README.md  main.cpp
headers/: ConsoleGuiHandler.h  ConsoleGuiUtils.h  ConsoleLine.h  FileDirectoryUtils.h  FileUtils.h  Filedirectory.h  KeypressHandler.h
headers/files/: File.h  FileDirectoryUtils.h  Filedirectory.h
headers/gui/: ConsoleGuiHandler.h  ConsoleGuiUtils.h  ConsoleLine.h
headers/gui/modules/: FileCreator.h  FileDeleter.h  FileMover.h  FilePreviewer.h  FileRenamer.h  HelpDrawer.h  MenuDrawer.h
src/: ConsoleGuiHandler.cpp  ConsoleGuiUtils.cpp  ConsoleLine.cpp  File.cpp  FileDirectoryUtils.cpp  FileUtils.cpp  Filedirectory.cpp  KeypressHandler.cpp
src/files/: File.cpp  FileDirectoryUtils.cpp  Filedirectory.cpp
src/gui/: ConsoleGuiHandler.cpp  ConsoleGuiUtils.cpp  ConsoleLine.cpp
src/gui/modules/: FileCreator.cpp  FileDeleter.cpp  FileMover.cpp  FilePreviewer.cpp  FileRenamer.cpp  HelpDrawer.cpp  MenuDrawer.cpp
